--- a/Boatell-v3/Boatell-v3/Base.lproj/Main.storyboard
+++ b/Boatell-v3/Boatell-v3/Base.lproj/Main.storyboard
@@ -223,7 +223,7 @@
                                 <rect key="frame" x="20" y="75" width="374" height="200"/>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5ki-4j-v7n">
-                                <rect key="frame" x="37" y="432" width="340" height="149"/>
+                                <rect key="frame" x="37" y="413" width="340" height="149"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IUc-SV-v09">
                                         <rect key="frame" x="0.0" y="73" width="340" height="1"/>
@@ -269,13 +269,13 @@
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Qk-WS-vUX">
-                                <rect key="frame" x="20" y="365" width="374" height="42"/>
+                                <rect key="frame" x="20" y="325" width="374" height="42"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="35"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M2q-lA-EuN">
-                                <rect key="frame" x="125" y="713" width="164" height="63"/>
+                                <rect key="frame" x="125" y="742" width="164" height="63"/>
                                 <color key="backgroundColor" red="0.23310689113785554" green="0.62398741568919602" blue="1" alpha="0.88021725171232879" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="M2q-lA-EuN" secondAttribute="height" multiplier="164:63" id="ByQ-8L-hQn"/>
@@ -289,7 +289,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wwh-79-h4v">
-                                <rect key="frame" x="20" y="805" width="374" height="30"/>
+                                <rect key="frame" x="20" y="834" width="374" height="30"/>
                                 <state key="normal" title="Don't have an account? Sign Up!">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
@@ -298,7 +298,7 @@
                                 </connections>
                             </button>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="2tG-oy-Pm4">
-                                <rect key="frame" x="148" y="599" width="118" height="32"/>
+                                <rect key="frame" x="75" y="578" width="264" height="32"/>
                                 <color key="backgroundColor" red="0.23310689109999999" green="0.62398741570000005" blue="1" alpha="0.88021725169999998" colorSpace="custom" customColorSpace="sRGB"/>
                                 <segments>
                                     <segment title="User"/>
@@ -311,21 +311,21 @@
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.41234580563061912" blue="0.73996668781725883" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="2tG-oy-Pm4" secondAttribute="trailing" constant="75" id="1YT-8G-CfV"/>
                             <constraint firstItem="ZXu-QL-XAx" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="5Ed-oZ-VD0"/>
                             <constraint firstItem="wwh-79-h4v" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="6hr-DQ-wmF"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="5ki-4j-v7n" secondAttribute="bottom" constant="281" id="7Pi-V0-eDP"/>
-                            <constraint firstItem="2tG-oy-Pm4" firstAttribute="top" secondItem="5ki-4j-v7n" secondAttribute="bottom" constant="18" id="A2e-SM-T9h"/>
-                            <constraint firstItem="4Qk-WS-vUX" firstAttribute="top" secondItem="ZXu-QL-XAx" secondAttribute="bottom" constant="90" id="EZj-aC-5me"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="5ki-4j-v7n" secondAttribute="bottom" constant="300" id="7Pi-V0-eDP"/>
+                            <constraint firstItem="2tG-oy-Pm4" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="75" id="7aL-45-u6q"/>
+                            <constraint firstItem="2tG-oy-Pm4" firstAttribute="top" secondItem="5ki-4j-v7n" secondAttribute="bottom" constant="16" id="AE7-Ri-ZgG"/>
+                            <constraint firstItem="4Qk-WS-vUX" firstAttribute="top" secondItem="ZXu-QL-XAx" secondAttribute="bottom" constant="50" id="EZj-aC-5me"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="5ki-4j-v7n" secondAttribute="trailing" constant="37" id="H2V-Ky-q8f"/>
                             <constraint firstItem="wwh-79-h4v" firstAttribute="top" secondItem="M2q-lA-EuN" secondAttribute="bottom" constant="29" id="Iay-Bq-vNC"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="4Qk-WS-vUX" secondAttribute="trailing" constant="20" id="JOs-rL-RPE"/>
-                            <constraint firstItem="M2q-lA-EuN" firstAttribute="top" secondItem="5ki-4j-v7n" secondAttribute="bottom" constant="132" id="RQE-GP-m4P"/>
+                            <constraint firstItem="M2q-lA-EuN" firstAttribute="top" secondItem="5ki-4j-v7n" secondAttribute="bottom" constant="180" id="RQE-GP-m4P"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="M2q-lA-EuN" secondAttribute="trailing" constant="125" id="Skx-n6-P3C"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ZXu-QL-XAx" secondAttribute="trailing" constant="20" id="ZeN-ZK-Cbu"/>
                             <constraint firstItem="3XY-h5-KY0" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Zg1-Sc-K2j"/>
                             <constraint firstItem="3XY-h5-KY0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="b9e-ra-J1n"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="2tG-oy-Pm4" secondAttribute="trailing" constant="148" id="bQ4-Vt-exF"/>
-                            <constraint firstItem="2tG-oy-Pm4" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="148" id="dds-YL-PiN"/>
                             <constraint firstItem="M2q-lA-EuN" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="125" id="eXK-iN-K9G"/>
                             <constraint firstItem="5ki-4j-v7n" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="37" id="fKW-Xi-cln"/>
                             <constraint firstItem="ZXu-QL-XAx" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="31" id="mfi-fe-CEc"/>
